# EXUBERANTEXPLORER

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
EXUBERANTEXPLORER/: setup.py
EXUBERANTEXPLORER/EXUBERANTEXPLORER/: constants.py  custom_functions.py  print_constants.py  test_custom_functions.py
notebooks/: explore-bulk-card-data.ipynb  explore-bulk-metadata.ipynb
scripts/: get_scryfall_bulk_metadata.py
src/: bulk_data_request.py
