[project]
name = "exuberantexplorer"
version = "0.1.0"
description = "A project where we exuberantly explore MTG cards."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroid>=3.3.6",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.0",
    "colorama>=0.4.6",
    "dill>=0.3.9",
    "idna>=3.10",
    "isort>=5.13.2",
    "joblib>=1.4.2",
    "mccabe>=0.7.0",
    "numpy>=2.2.0",
    "pathlib>=1.0.1",
    "platformdirs>=4.3.6",
    "pylint>=3.3.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "setuptools>=75.8.0",
    "soupsieve>=2.6",
    "threadpoolctl>=3.5.0",
    "tomlkit>=0.13.2",
    "urllib3>=2.2.3",
]
