[project]
name = "exuberantexplorer"
version = "0.1.0"
description = "A project where we exuberantly explore MTG cards."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroid==3.3.6",
    "asttokens==3.0.0",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "dill==0.3.9",
    "executing==2.2.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "isort==5.13.2",
    "jedi==0.19.2",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathlib==1.0.1",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pylint==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32==308",
    "pyzmq==26.2.1",
    "requests==2.32.3",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "setuptools==75.8.0",
    "six==1.17.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "threadpoolctl==3.5.0",
    "tithe-extractor",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "tzdata==2025.1",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
]

[tool.uv.sources]
tithe-extractor = { git = "https://github.com/rohr-the-polyhobbyist/tithe-extractor.git" }
